# bank-api

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  default.env  docker-compose.yml  pyproject.toml  setup.cfg  test.env
app/: __main__.py  app.py  settings.py
app/api/: transaction.py  user.py  wallet.py
app/cleanups/: database.py
app/middlewares/: db_session.py
app/models/: base.py  transaction.py  user.py  wallet.py
app/startups/: config.py  database.py
settings/: default.conf
tests/: conftest.py
tests/integration/: test_transaction.py  test_user.py  test_wallet.py
