[tool.poetry]
name = "bank-api"
version = "0.1.0"
description = ""
authors = ["Nikita Semenov <nasemenov.git@gmail.com>"]
readme = "README.md"
packages = [{include = "bank_api"}]

[tool.poetry.dependencies]
python = "3.11.2"
uvloop = "^0.17.0"
aiohttp = "^3.8.4"
pyhocon = "^0.3.60"
apischema = "^0.18.0"
sqlalchemy = "^2.0.7"
asyncpg = "^0.27.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"
pytest-clarity = "^1.0.1"
pytest-cov = "^4.0.0"
pytest-testdox = "^3.0.1"
pytest-aiohttp = "^1.0.4"


[tool.poetry.group.dev.dependencies]
mypy = "^1.1.1"
wemake-python-styleguide = "^0.17.0"
black = "^23.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
